<resources>
    <string name="app_name">Pinjemin</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

	<!-- Ferdi's work -->
	<string name="UbahStatusPeminjamanWarning"><b>CATATAN:</b> Anda tidak dapat mengubah status maupun review untuk peminjaman yang statusnya sudah diubah menjadi DIKEMBALIKAN."</string>
	<string name="commentTips"><b>TIPS:</b> Anda dapat mengetikkan tempat bertemu, kriteria tambahan, dll. di sini."</string>
</resources>