<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="pinjemin.activity.MainActivity">

	<item
	android:id="@+id/action_refresh"
	android:icon="@drawable/ic_action_refresh"
	android:orderInCategory="0"
	android:title="@string/action_refresh"
	android:visible="false"
	app:showAsAction="always" />

	<item
	android:id="@+id/action_search"
	android:icon="@drawable/ic_action_search"
	android:orderInCategory="1"
	android:title="@string/action_search"
	app:showAsAction="always" />

	<item
	android:id="@+id/action_lihat_profil"
	android:orderInCategory="3"
	android:title="Lihat Profil"
	app:showAsAction="never" />

	<item
	android:id="@+id/action_ubah_profil"
	android:orderInCategory="4"
	android:title="Ubah Profil"
	app:showAsAction="never" />

	<item
	android:id="@+id/action_logout"
	android:orderInCategory="5"
	android:title="@string/action_logout"
	app:showAsAction="never" />

</menu>